--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <div class="content-h4">BRINGING BEAUTY To YOUR WORLD</div>
 
         <div class="content-parts">
-            <div align="center"><img src="_.jpg" width="226" height="226"></div>
+            <div align="center"><img src="tanaya.jpg" width="226" height="226"></div>
             <div class="content-parts-h4">Tanaya Gyani</div>
             <div class="content-parts-p">One of Tanya Gyani’s strengths is her ability to handle a wide range of
                 projects. She is one of the most versatile interior designers due to the variety of her work. In fact,
